--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </div>
             <div class="right-nav-container">
                 <ul class="list">
-                    <a href="#">
+                    <a href="">
                         <li>Inicio</li>
                     </a>
-                    <a href="#">
+                    <a href="shop.html">
                         <li>Shop</li>
                     </a>
                     <a href="#" id="bold">
@@ -51,7 +51,7 @@
     <section id="startnow-section">
         <article class="startnow-main-container">
             <div class="startnow-left-container">
-                <h3 class="startnow-title">¡Empeza ya!</h3>
+                <h3 class="startnow-title">¡Empeza ya !</h3>
                 <p class="startnow-text">¿Buscas una experiencia atlética emocionante? Este es el lugar para
                     encontrarlo.
                     Nuestros instructores expertos realmente saben lo que hacen y se preocupan profundamente por su
