--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleInicio.css">
     <link rel="stylesheet" href="normalize.css">
-    <title>NNST WEBSITE</title>
+    <title> NNST | GYM</title>
 </head>
 
 <body>
@@ -15,12 +15,13 @@
             <div class="left-nav-container">
                 <h1 class="logo">NNST</h1>
             </div>
+
             <div class="right-nav-container">
                 <ul class="list">
-                    <a href="">
+                    <a href="#">
                         <li>Inicio</li>
                     </a>
-                    <a href="shop.html">
+                    <a href="#">
                         <li>Shop</li>
                     </a>
                     <a href="#" id="bold">
@@ -31,6 +32,10 @@
                     </a>
                 </ul>
             </div>
+            <svg class="hamburger" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"
+                style="fill: #fff ;transform: ;msFilter:;">
+                <path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path>
+            </svg>
         </nav>
     </header>
 
@@ -51,7 +56,7 @@
     <section id="startnow-section">
         <article class="startnow-main-container">
             <div class="startnow-left-container">
-                <h3 class="startnow-title">¡Empeza ya !</h3>
+                <h3 class="startnow-title">¡Empeza ya!</h3>
                 <p class="startnow-text">¿Buscas una experiencia atlética emocionante? Este es el lugar para
                     encontrarlo.
                     Nuestros instructores expertos realmente saben lo que hacen y se preocupan profundamente por su
@@ -127,7 +132,7 @@
             <h1 class="logo">NNST</h1>
             <div class="media-container">
                 <h4>SEGUINOS EN:</h4>
-                <svg  class= "RRSS"http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <svg class="RRSS" http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                     style="fill:#fff;transform: ;msFilter:;">
                     <path
                         d="M11.999 7.377a4.623 4.623 0 1 0 0 9.248 4.623 4.623 0 0 0 0-9.248zm0 7.627a3.004 3.004 0 1 1 0-6.008 3.004 3.004 0 0 1 0 6.008z">
@@ -137,7 +142,7 @@
                         d="M20.533 6.111A4.605 4.605 0 0 0 17.9 3.479a6.606 6.606 0 0 0-2.186-.42c-.963-.042-1.268-.054-3.71-.054s-2.755 0-3.71.054a6.554 6.554 0 0 0-2.184.42 4.6 4.6 0 0 0-2.633 2.632 6.585 6.585 0 0 0-.419 2.186c-.043.962-.056 1.267-.056 3.71 0 2.442 0 2.753.056 3.71.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.042 1.268.055 3.71.055s2.755 0 3.71-.055a6.615 6.615 0 0 0 2.186-.419 4.613 4.613 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.186.043-.962.056-1.267.056-3.71s0-2.753-.056-3.71a6.581 6.581 0 0 0-.421-2.217zm-1.218 9.532a5.043 5.043 0 0 1-.311 1.688 2.987 2.987 0 0 1-1.712 1.711 4.985 4.985 0 0 1-1.67.311c-.95.044-1.218.055-3.654.055-2.438 0-2.687 0-3.655-.055a4.96 4.96 0 0 1-1.669-.311 2.985 2.985 0 0 1-1.719-1.711 5.08 5.08 0 0 1-.311-1.669c-.043-.95-.053-1.218-.053-3.654 0-2.437 0-2.686.053-3.655a5.038 5.038 0 0 1 .311-1.687c.305-.789.93-1.41 1.719-1.712a5.01 5.01 0 0 1 1.669-.311c.951-.043 1.218-.055 3.655-.055s2.687 0 3.654.055a4.96 4.96 0 0 1 1.67.311 2.991 2.991 0 0 1 1.712 1.712 5.08 5.08 0 0 1 .311 1.669c.043.951.054 1.218.054 3.655 0 2.436 0 2.698-.043 3.654h-.011z">
                     </path>
                 </svg>
-                <svg  class= "RRSS1"http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                <svg class="RRSS1" http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                     style="fill:#fff;transform: ;msFilter:;">
                     <path
                         d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z">
@@ -146,7 +151,6 @@
             </div>
         </div>
     </footer>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="script.js"></script>
 </body>
 
