--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
             <div class="right-nav-container">
                 <ul class="list">
-                    <a href="#">
+                    <a href="index.html">
                         <li>Inicio</li>
                     </a>
-                    <a href="#">
+                    <a href="shop.html">
                         <li>Shop</li>
                     </a>
                     <a href="#" id="bold">
                         <li>Sobre Nosotros</li>
                     </a>
-                    <a href="#">
+                    <a href="contacto.html">
                         <li>Contacto</li>
                     </a>
                 </ul>
