--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="shop.html">
                         <li>Shop</li>
                     </a>
-                    <a href="#" id="bold">
+                    <a href="sobre_nosotros.html" id="bold">
                         <li>Sobre Nosotros</li>
                     </a>
                     <a href="contacto.html">
