agrego una imagen y correccion de errores

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </article>
     </section>
 
-    <section id="aboutus-section" <article class="aboutus-main-container">
+    <section id="aboutus-section"> <article class="aboutus-main-container">
         <img src="img/img2.jpg" alt="image2">
         <div class="aboutus-left-container">
             <h3 class="aboutus-title">Nosotros</h3>
