--- a/shop.html
+++ b/shop.html
@@ -29,9 +29,12 @@
 
     <main>
         <div class="texto-principal">
+            <div class="texto">
             <h1>NUESTRO</h1>
             <h2 class="verde">SHOP</h2>
-            <img src="" alt="">
+            </div>
+            <img src="img/carrito.png" alt="carrito">
+            
         </div>
         <div class="buscador">
             <input type="text" class="buscar" placeholder="Busca nuestros productos..">
