--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/nav-footer-menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Maven+Pro:wght@500;800;900&family=Oswald:wght@500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="normalize.css">
     <script src="/js/style.js" defer></script>
     <title> NNST | GYM</title>
 </head>
