--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
     <main class="main2">
         <div class="contenedor">
             <div class="cont_izq_form">
-                <form class="formulario" action="">
+                <form class="formulario">
                     <div class="cont_izq_dentro cont_izq_dentro_eligeform">
                         <div class="cont_gim">
                             <h3>GIMNASIO</h3>
@@ -64,16 +64,16 @@
                             <h3>TIENDA</h3>
                         </div>
                     </div>
-                    <label for="">Nombre</label>
+                    <label>Nombre</label>
                     <input type="text" class="formulario_shop" id="nombre" name="nombre" value="">
-                    <label for="">Apellido</label>
+                    <label>Apellido</label>
                         <input type="text" class="formulario_shop" id="apellido" name="apellido" value="">
-                    <label for="">Telefono</label>
+                    <label >Telefono</label>
                         <input type="number" class="formulario_shop" id="telefono" name="telefono" value="">
-                    <label for="">Correo Electronico</label>
+                    <label>Correo Electronico</label>
                         <input type="email" class="formulario_shop" id="correo" name="correo" value="">
-                    <label for="">Problema</label>
-                        <textarea class="formulario_shop" id="problema" name="problema" value="" cols="30" rows="10"></textarea>
+                    <label>Problema</label>
+                        <textarea class="formulario_shop" id="problema" name="problema" cols="30" rows="10"></textarea>
                     <input type="button" name="but_envia_shop" id="but_shop" value="Enviar">
                 </form>
             </div>
