--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </main>
-    <main class="main2">
+    <article class="main2">
         <div class="contenedor">
             <div class="cont_izq_form">
                 <form class="formulario">
@@ -78,7 +78,7 @@
                 </form>
             </div>
         </div>
-    </main>
+    </article>
 </div>
     <footer>
         <h4>Redes sociales</h4>
