--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p>Derechos de autor &copy; 2024 Grupo 8 CaC. Todos los derechos reservados.</p>
     </footer>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
