--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <a href="#"><i class="fab fa-instagram-square"></i></a>
         <p>Derechos de autor &copy; 2024 Grupo 8 CaC. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="/js/https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="/js/script.js"></script>
 </body>
 
