--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <section id="home-section">
         <article class="home-main-container">
-            <h3 class="home-title"></h3>
+            <h3 class="home-title zoomIn">#DESAFIATUCUERPO</h3>
             <p class="home-text">Empieza tu transformación aquí.</p>
             <a href="#startnow-section" class="arrow-bg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"
@@ -107,7 +107,6 @@
         <a href="#"><i class="fab fa-instagram-square"></i></a>
         <p>Derechos de autor &copy; 2024 Grupo 8 CaC. Todos los derechos reservados.</p>
     </footer>
-    <script src="/js/https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="/js/script.js"></script>
 </body>
 
