--- a/contacto.html
+++ b/contacto.html
@@ -96,6 +96,7 @@
         <a href="#"><i class="fab fa-facebook-square"></i></a>
         <a href="#"><i class="fab fa-instagram-square"></i></a>
         <p>Derechos de autor &copy; 2024 Grupo 8 CaC. Todos los derechos reservados.</p>
+        <script src="js/valida.js"></script>
     </footer>
 </body>
 </html>
