actualizacion de shop para que consuma datos de la db

--- a/public/shop.html
+++ b/public/shop.html
@@ -62,7 +62,7 @@
                 <div class="cartas">
                 <div class="carta">
                     <div class="carta-sup">
-                        <img src="https://acdn.mitiendanube.com/stores/837/804/products/2061-b56d1558bee413e7b316618725686977-1024-1024.png" alt="">
+                        <img src="https://static.thenounproject.com/png/5018320-200.png" alt="">
                     </div>
                     <div class="carta-inf">
                         <div class="carta-titulo-principal"><h4>Whey</h4></div>
